--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ swift.swiftdoc
 /bindings/kotlin/ldk-node-android/lib/src/main/kotlin/org/lightningdevkit/ldknode/ldk_node.kt
 /bindings/kotlin/ldk-node-jvm/lib/src/main/kotlin/org/lightningdevkit/ldknode/ldk_node.kt
 /bindings/kotlin/ldk-node-jvm/lib/src/main/resources/
+.env
